--- a/src/content/devlog/4-deployment-and-debugging.mdx
+++ b/src/content/devlog/4-deployment-and-debugging.mdx
@@ -18,13 +18,13 @@ import CodeBlock from '../../components/CodeBlock.astro';
 <h2 class="text-2xl font-bold mt-8 mb-4">Going Live: GitHub Pages Deployment</h2>
 
 <p>
-  After building our content management system and interactive components, it was time to deploy the Signals & Systems platform to the web. GitHub Pages emerged as the natural choice for hosting our Astro-based static site, offering seamless integration with our existing GitHub workflow.
+  After building my content management system and interactive components, it was time to deploy the Signals & Systems platform to the web. GitHub Pages emerged as the natural choice for hosting my Astro-based static site, offering seamless integration with my existing GitHub workflow.
 </p>
 
 <h3 class="text-xl font-semibold mt-6 mb-3">GitHub Actions Workflow</h3>
 
 <p>
-  The deployment process leverages GitHub Actions to automatically build and deploy our site whenever we push changes to the main branch. The workflow handles the entire pipeline from source code to live site.
+  The deployment process leverages GitHub Actions to automatically build and deploy my site whenever I push changes to the main branch. The workflow handles the entire pipeline from source code to live site.
 </p>
 
 <div class="my-6">
@@ -94,7 +94,7 @@ jobs:
 <h3 class="text-xl font-semibold mt-6 mb-3">Custom Domain Configuration</h3>
 
 <p>
-  Setting up custom domains involved both DNS configuration and GitHub Pages settings. We configured two domains to point to our GitHub Pages site: our primary domain and a shorter alternative.
+  Setting up custom domains involved both DNS configuration and GitHub Pages settings. I configured two domains to point to my GitHub Pages site: my primary domain and a shorter alternative.
 </p>
 
 <div class="my-6">
@@ -141,7 +141,7 @@ export default defineConfig({
 <h3 class="text-xl font-semibold mt-6 mb-3">Build vs. Source Deployment</h3>
 
 <p>
-  One key decision was whether to push the built <code>dist</code> folder or let GitHub Actions handle the build process. We chose the GitHub Actions approach for several reasons:
+  One key decision was whether to push the built <code>dist</code> folder or let GitHub Actions handle the build process. I chose the GitHub Actions approach for several reasons:
 </p>
 
 <ul class="list-disc pl-6 mt-4 space-y-2">
@@ -154,13 +154,13 @@ export default defineConfig({
 <h2 class="text-2xl font-bold mt-8 mb-4">Development-Only Debug Patterns</h2>
 
 <p>
-  As our platform grew more complex, we needed better visibility into what was happening during development without cluttering the production site with debug information.
+  As my platform grew more complex, I needed better visibility into what was happening during development without cluttering the production site with debug information.
 </p>
 
 <h3 class="text-xl font-semibold mt-6 mb-3">Environment-Based Conditional Rendering</h3>
 
 <p>
-  Astro provides <code>import.meta.env.DEV</code> to distinguish between development and production builds. This allows us to include helpful debug information that automatically disappears in production.
+  Astro provides <code>import.meta.env.DEV</code> to distinguish between development and production builds. This allows me to include helpful debug information that automatically disappears in production.
 </p>
 
 <div class="my-6">
@@ -179,7 +179,7 @@ export default defineConfig({
 <h3 class="text-xl font-semibold mt-6 mb-3">Overlay Debug Styles</h3>
 
 <p>
-  To prevent debug information from affecting page layout, we developed an overlay pattern using CSS positioning. This keeps debug info visible but completely separate from the content flow.
+  To prevent debug information from affecting page layout, I developed an overlay pattern using CSS positioning. This keeps debug info visible but completely separate from the content flow.
 </p>
 
 <div class="my-6">
@@ -209,7 +209,7 @@ export default defineConfig({
 <h3 class="text-xl font-semibold mt-6 mb-3">Common Debug Patterns</h3>
 
 <p>
-  We established several reusable patterns for different types of debug information:
+  I established several reusable patterns for different types of debug information:
 </p>
 
 <div class="my-6">
@@ -242,12 +242,12 @@ export default defineConfig({
 <h2 class="text-2xl font-bold mt-8 mb-4">Updating Development Guidelines</h2>
 
 <p>
-  To ensure consistent use of these patterns across the project, we updated our GitHub Copilot instructions to include comprehensive guidelines for development-only debug information.
+  To ensure consistent use of these patterns across the project, I updated my GitHub Copilot instructions to include comprehensive guidelines for development-only debug information.
 </p>
 
 <CalloutBox type="info" title="Documentation as Code">
   <p>
-    By embedding these patterns in our Copilot instructions, we ensure that both human developers and AI assistants follow consistent practices when adding debug functionality.
+    By embedding these patterns in my Copilot instructions, I ensure that both human developers and AI assistants follow consistent practices when adding debug functionality.
   </p>
 </CalloutBox>
 
@@ -297,7 +297,7 @@ git push origin main
 <h2 class="text-2xl font-bold mt-8 mb-4">Lessons Learned</h2>
 
 <p>
-  Setting up deployment and debugging patterns taught us several valuable lessons:
+  Setting up deployment and debugging patterns taught me several valuable lessons:
 </p>
 
 <ul class="list-disc pl-6 mt-4 space-y-2">
@@ -309,16 +309,16 @@ git push origin main
 
 <CalloutBox type="tip" title="Next Steps">
   <p>
-    With deployment automated and debugging patterns established, we're ready to focus on content creation and platform refinements. The foundation is solid, and the development experience is smooth.
+    With deployment automated and debugging patterns established, I'm ready to focus on content creation and platform refinements. The foundation is solid, and the development experience is smooth.
   </p>
 </CalloutBox>
 
 <h2 class="text-2xl font-bold mt-8 mb-4">Looking Forward</h2>
 
 <p>
-  Our deployment pipeline is now production-ready, and our development debugging patterns provide the visibility we need without compromising the user experience. This foundation enables rapid iteration and confident deployments as we continue to expand the platform's capabilities.
+  My deployment pipeline is now production-ready, and my development debugging patterns provide the visibility I need without compromising the user experience. This foundation enables rapid iteration and confident deployments as I continue to expand the platform's capabilities.
 </p>
 
 <p>
-  The combination of automated deployment and intelligent debugging represents a significant step forward in our development workflow, demonstrating how thoughtful tooling choices compound into major productivity gains.
+  The combination of automated deployment and intelligent debugging represents a significant step forward in my development workflow, demonstrating how thoughtful tooling choices compound into major productivity gains.
 </p>
