2025-05-29 - 21:00 - Series-specific theming and UTC date formatting overhaul: - Centralized all date formatting to use formatDateUTC utility for consistent UTC display and fixed off-by-one errors across homepage, articles, series, and navigation. - Refactored all relevant pages/components (index.astro, articles.astro, series.astro, series/[slug].astro, SeriesNav.astro, ArticleLayout.astro, SeriesLayout.astro) to use formatDateUTC and data-series attributes for theming. - Updated CSS: removed [data-series="isomon"] h2, h3, h4 selectors to prevent unintended green headers; added global .isomon-title selector so ISOMON titles are always green regardless of parent context. - Ensured only main article/series titles are green for ISOMON, not all headers. - Verified all date displays are correct and consistent. - Theming approach is now DRY and easily extensible for future series. - #theming #isomon #date-format #css #refactor #bugfix

--- a/src/content/devlog/1-platform-setup.mdx
+++ b/src/content/devlog/1-platform-setup.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Devlog #1: Setting Up My Publishing Platform"
+title: "devlog #1: Setting Up My Publishing Platform"
 description: "Exploring how I established Signals & Systems, the technologies involved, and the decisions behind them."
 publishDate: 2025-05-21
-series: "Devlog"
+series: "devlog"
 order: 1
 coverImage: "/images/devlog-1-cover.svg"
 ---
