--- a/src/content/devlog/2-interactive-components.mdx
+++ b/src/content/devlog/2-interactive-components.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Devlog #2: Interactive Components & User Privacy"
+title: "devlog #2: Interactive Components & User Privacy"
 description: "Enhancing Content with Dynamic Elements While Respecting User Preferences"
 publishDate: 2025-05-22
-series: "Devlog"
+series: "devlog"
 order: 2
 coverImage: "/images/devlog-2-cover.svg"
 ---
