--- a/src/content/devlog/3-dynamic-content.mdx
+++ b/src/content/devlog/3-dynamic-content.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Devlog #3: The Astro Content Collections Migration Epic"
+title: "devlog #3: The Astro Content Collections Migration Epic"
 description: "My journey migrating from static files to a dynamic, type-safe content architecture using Astro Content Collections and MDX."
 publishDate: 2025-05-23
-series: "Devlog"
+series: "devlog"
 order: 3
 coverImage: "/images/devlog-3-cover.svg"
 ---
